--- a/deploy/www/samples/css/style.css
+++ b/deploy/www/samples/css/style.css
@@ -15,6 +15,7 @@ html, body {
   -webkit-box-orient: vertical;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 #container {
@@ -46,11 +47,11 @@ html, body {
 }
 
 #loading.hidden {
-     -moz-transition: opacity 0.3s ease-out;  
-       -o-transition: opacity 0.3s ease-out;  
-  -webkit-transition: opacity 0.3s ease-out;  
-      -ms-transition: opacity 0.3s ease-out;  
-          transition: opacity 0.3s ease-out;  
+     -moz-transition: opacity 0.3s ease-out;
+       -o-transition: opacity 0.3s ease-out;
+  -webkit-transition: opacity 0.3s ease-out;
+      -ms-transition: opacity 0.3s ease-out;
+          transition: opacity 0.3s ease-out;
   opacity: 0;
 }
 
